# SummaryBot

./: .gitignore  README.md  compose.yaml  main.py
notebooks/input_pipeline/: input_exploration.ipynb
notebooks/summarization/: summarization_exploration.ipynb
sample_inputs/: .gitignore  enzyme_lab_report.docx  march_madness_data.csv  mm_data.xlsx  sales_management.pptx
src/: main.py  tracer_bullet.ipynb
src/app/: Dockerfile  main.py  pyproject.toml
src/app/audio/: audio.py
src/app/processing/: file_preprocess.py
src/app/summarize/: summarize.py  summarize_utils.py
src/audio/: audio.py
src/ollama/: Dockerfile
src/processing/: __init__.py
src/summarize/: __init__.py  summarize.py
src/ui/: Dockerfile  package-lock.json  package.json
src/ui/src/: App.vue  main.ts
src/ui/src/components/: InputDialogBox.vue  OutputDialogBox.vue  varStore.ts
