[project]
name = "summarybot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "kokoro==0.9.4",
    "ollama==0.5.1",
    "pip>=25.2",
    "pymupdf==1.26.1",
    "soundfile==0.13.1",
    "spacy==3.8.7",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "torchvision==0.21.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" }
]
torchaudio = [
    { index = "pytorch-cpu" }
]
torchvision = [
    { index = "pytorch-cpu" }
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
